--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-native-global-props": "^1.1.5",
-    "typescript": "4.9.5"
+    "react-typical": "^0.1.3",
+    "typescript": "4.9.5",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
